# venvsnap

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: benchmark.py  demo_requirements.txt
src/venvsnap/: __init__.py  __main__.py  cache.py  cli.py  lockfile.py  pypi.py  restore.py  snapshot.py  venv_utils.py
tests/: test_cache.py  test_cli.py  test_lockfile.py  test_pypi.py
