[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "venvsnap"
version = "0.1.0"
description = "Snapshot your Python venv. Restore it in seconds, anywhere."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "venvsnap contributors" }]
keywords = ["venv", "virtualenv", "lockfile", "cache", "pip", "snapshot", "restore"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: System :: Archiving :: Packaging",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "typer>=0.12",
    "packaging>=23.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/VKSFY/venvsnap"
Repository = "https://github.com/VKSFY/venvsnap"
Issues = "https://github.com/VKSFY/venvsnap/issues"

[project.scripts]
venvsnap = "venvsnap.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/venvsnap"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
# UP045/UP007: typer needs runtime-resolvable Optional[T] annotations on
# option parameters, not PEP 604 X | None unions.
# B008: typer.Option(...) defaults are the standard typer idiom.
ignore = ["E501", "UP007", "UP045", "B008"]

[tool.ruff.lint.per-file-ignores]
# The stdout reconfigure block must run before importing rich.
"src/venvsnap/cli.py" = ["E402"]
# benchmark.py uses unused timing variables for clarity.
"examples/*" = ["F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
